@@ -1,3 +1,7 @@
+- XFdrake:
+  o explicitly Load or Disable module "dri"
+    (to be independent of Xorg's default choice)
+
 Version 0.63 - 30 September 2008
 
 - translations updates
